fixed text alignment

--- a/css/subpage.scss
+++ b/css/subpage.scss
@@ -37,6 +37,9 @@
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
 
+  width: 100%;
+  text-align: center;
+
   color: white;
   font-weight: bold;
 }
